more 	modified:   index.html 	new file:   stylesheet.css

--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
-<!DOCTYPE=html>
-<html>
-  <head>
-    <meta name="author" content="Raina G">
-    <link rel="icon" href="r31maincontent/r31main.png" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="style.css"/>
-  </head>
-  <body>
-    <h1>Haiiii :3</h1>
-    <h2>This is a late night creation, i need to eep</h2>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta name="author" content="Raina">
+        <link rel="icon" href="r31maincontent/r31main.png" type="image/x-icon">
+        <link rel="stylesheet" type="text/css" href="style.css"/>
+    </head>
+    <body>
+        <h1>Haiii :3 and welcome!</h1>
+        <h2>This is a late night creation, i need to eep</h2>
+        <h3>If you do digital art hit me up, if not ill get it eventually</h3>
+        <p>This is a gateway of my other hubs</p>
+        <ul>
+            <li>Discord Server: <del>REDACTED</del></li>
+            <li>Discord User: <a href="https://www.discordapp.com/users/284530729550086145">umbralprism</a></li>
+            <li>Steam: <a href="https://steamcommunity.com/id/OmnissiahSimp/">Bartumamius Voth</a></li>
+            <li>Youtube: <a href="https://www.youtube.com/@prismalraina">Prismatic Umbra</a></li>
+            <li>Twitch: <a href="https://www.twitch.tv/umbralprism">Umbral Prism</a></li>
+            <li>Bandcamp: <a href="https://bandcamp.com/umbralprism">Prisma</a></li>
+            <li>Github: <a href="https://github.com/rainag-tech">Raina</a></li>
+        </ul>
   </body>
 </html>
