--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <Title>Umbral Prism Primitive Gateway</Title>
         <meta name="author" content="Raina">
         <link rel="icon" href="r31maincontent/r31main.png" type="image/x-icon">
-        <link rel="stylesheet" type="text/css" href="style.css"/>
+        <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
     </head>
     <body>
         <h1>Haiii :3 and welcome!</h1>
-        <h2>This is a late night creation, i need to eep</h2>
         <h3>If you do digital art hit me up, if not ill get it eventually</h3>
+        <p>Might change this to 'Outpost Zeta'</p>
         <p>This is a gateway of my other hubs</p>
         <ul>
+            <li>Main site: <a href="https://umbralprism.work">umbralprism.work</a></li>
             <li>Discord Server: <del>REDACTED</del></li>
             <li>Discord User: <a href="https://www.discordapp.com/users/284530729550086145">umbralprism</a></li>
             <li>Steam: <a href="https://steamcommunity.com/id/OmnissiahSimp/">Bartumamius Voth</a></li>
@@ -18,6 +20,9 @@
             <li>Twitch: <a href="https://www.twitch.tv/umbralprism">Umbral Prism</a></li>
             <li>Bandcamp: <a href="https://bandcamp.com/umbralprism">Prisma</a></li>
             <li>Github: <a href="https://github.com/rainag-tech">Raina</a></li>
+            <li>SoundCloud: <a href="https://soundcloud.com/umbralprism">Prisma</a></li>
+            <li>Reddit: <a href="https://www.reddit.com/user/RainaPrism/">Raina</a></li>
+            <li>MakeShip: <a href="https://www.makeship.com/badges/user/Umbralprism">Raina</a></li>
         </ul>
   </body>
 </html>
