--- a/index.html
+++ b/index.html
@@ -1,28 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <Title>Umbral Prism Primitive Gateway</Title>
+        <Title>Umbralway</Title>
         <meta name="author" content="Raina">
-        <link rel="icon" href="r31maincontent/r31main.png" type="image/x-icon">
+        <link rel="icon" href=".jpg" type="image/x-icon">
         <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
     </head>
     <body>
-        <h1>Haiii :3 and welcome!</h1>
-        <h3>If you do digital art hit me up, if not ill get it eventually</h3>
-        <p>Might change this to 'Outpost Zeta'</p>
-        <p>This is a gateway of my other hubs</p>
-        <ul>
-            <li>Main site: <a href="https://umbralprism.work">umbralprism.work</a></li>
-            <li>Discord Server: <del>REDACTED</del></li>
-            <li>Discord User: <a href="https://www.discordapp.com/users/284530729550086145">umbralprism</a></li>
-            <li>Steam: <a href="https://steamcommunity.com/id/OmnissiahSimp/">Bartumamius Voth</a></li>
-            <li>Youtube: <a href="https://www.youtube.com/@prismalraina">Prismatic Umbra</a></li>
-            <li>Twitch: <a href="https://www.twitch.tv/umbralprism">Umbral Prism</a></li>
-            <li>Bandcamp: <a href="https://bandcamp.com/umbralprism">Prisma</a></li>
-            <li>Github: <a href="https://github.com/rainag-tech">Raina</a></li>
-            <li>SoundCloud: <a href="https://soundcloud.com/umbralprism">Prisma</a></li>
-            <li>Reddit: <a href="https://www.reddit.com/user/RainaPrism/">Raina</a></li>
-            <li>MakeShip: <a href="https://www.makeship.com/badges/user/Umbralprism">Raina</a></li>
-        </ul>
-  </body>
+        <header></header>
+        <div class="righthanger">
+            <h3>Exterior Links</h3>
+            <ul>
+                <li><span class="styletooltip" sscv="Its down until figure it out"><s>Main Site</s></span></li>
+                <li><span class="styletooltip" sscv="Not making said 'server' for now"><s>Discord Server</s></span></li>
+                <li></li>
+                <li><a href="https://www.discordapp.com/users/284530729550086145">Discord User</a></li>
+                <li><a href="https://bsky.app/profile/umbralprism.bsky.social">BlueSky</a></li>
+                <li><a href="https://www.reddit.com/user/RainaPrism/">Reddit</a></li>
+                <li><a href="https://soundcloud.com/umbralprism">SoundCloud</a></li>
+                <li><a href="https://steamcommunity.com/id/OmnissiahSimp/">Steam</a></li>
+                <li><a href="https://www.youtube.com/@prismalraina">Youtube</a></li>
+                <li><a href="https://github.com/rainaprism">Github</a></li>
+                <li><a href="https://bandcamp.com/umbralprism">Bandcamp</a></li>
+                <li><a href="https://www.twitch.tv/umbralprism">Twitch</a></li>
+                <li><a href="https://www.makeship.com/badges/user/Umbralprism">MakeShip Badges</a></li>
+            </ul></div>
+        <h1>Haiii :3 and welcome to the UmbralWay!</h1>
+        <p>Though i am not the most socially active</p>
+        <h4>Some things about me, while I still work on my site and figure out what I want to do there and here</h4>
+        <span class="umbralway">
+            <h3>This is a gateway of my other hubs</h3>
+            <ul>
+                <li>I am obsessed with many Sci-fi</li>
+                <li>Am obsessed with <span class="styletooltip"sscv="Tanks, Jets, Bio-organisms, Computers everything is a machine">machines</span></li>
+                <li>Advocate of shared knowledge for the benefit of all || <a href="https://kopimistsamfundet.se/english/">Kopimist</a>  ||</li>
+                <li>Praise the Omnissiah</li>
+                <li></li>
+            </ul>
+        </span>
+        <footer><div="something">rainasocial@tuta.com</div></footer>
+    </body>
 </html>
