--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><span class="styletooltip" sscv="Its down until figure it out"><s>Main Site</s></span></li>
                 <li><span class="styletooltip" sscv="Not making said 'server' for now"><s>Discord Server</s></span></li>
-                <li></li>
+                <li><span class="styletooltip" sscv="WIP"><s>Neocities</s></span></li>
                 <li><a href="https://www.discordapp.com/users/284530729550086145">Discord User</a></li>
                 <li><a href="https://bsky.app/profile/umbralprism.bsky.social">BlueSky</a></li>
                 <li><a href="https://www.reddit.com/user/RainaPrism/">Reddit</a></li>
